--- a/oszika/assets/css/style.css
+++ b/oszika/assets/css/style.css
@@ -1,12 +1,3 @@
-
-
-/*
-Author: Bootstrapthemes
-Author URI: http://bootstrapthemes.co
-*/
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
 html,
 body {
     background-color: #fff;
@@ -571,7 +562,7 @@ input::-ms-input-placeholder {
 .home .main_home .video_play_icon a{
     width:175px;
     height:125px;
-    background: #032F3E;
+    background: #d68851; /* #032F3E */
     display: inline-block;
     text-align: center;
     line-height: 140px;
